crates/solidity/testing/snapshots/bindings_output/using/address/generated/0.4.21-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected AddressKeyword or AssemblyKeyword or BoolKeyword or BreakKeyword or ByteKeyword or BytesKeyword or CloseBrace or ContinueKeyword or DecimalLiteral or DoKeyword or DoubleQuotedHexStringLiteral or DoubleQuotedStringLiteral or EmitKeyword or FalseKeyword or FixedKeyword or ForKeyword or FunctionKeyword or HexLiteral or Identifier or IfKeyword or IntKeyword or MappingKeyword or NewKeyword or OpenBrace or OpenBracket or OpenParen or ReturnKeyword or SingleQuotedHexStringLiteral or SingleQuotedStringLiteral or StringKeyword or SuperKeyword or ThisKeyword or ThrowKeyword or TrueKeyword or UfixedKeyword or UintKeyword or VarKeyword or WhileKeyword.
   ╭─[input.sol:7:9]
   │
 7 │ ╭─▶         payable(_rcpt).sendValue();
 8 │ ├─▶     }
   │ │           
   │ ╰─────────── Error occurred here.
───╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ library Address {
   │         ───┬───  
   │            ╰───── def: 1
 2 │     function sendValue(address payable recipient) internal {}
   │              ────┬────                 ────┬────  
   │                  ╰──────────────────────────────── def: 2
   │                                            │      
   │                                            ╰────── def: 3
   │ 
 4 │ contract Test {
   │          ──┬─  
   │            ╰─── def: 4
 5 │     using Address for address payable;
   │           ───┬───  
   │              ╰───── ref: 1
 6 │     function test(address _rcpt) public {
   │              ──┬─         ──┬──  
   │                ╰───────────────── def: 5
   │                             │    
   │                             ╰──── def: 6
───╯
